--- a/WhereToPlay/app/src/main/res/layout/activity_main.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/dl_sideslip"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
