修改了webview的添加方式

--- a/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail.xml
@@ -234,10 +234,10 @@
 
                     <TextView
                         android:id="@+id/tv_merchant_detail_grade"
-                        android:layout_width="@dimen/width_10"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
-                        android:text="611"
+                        android:text="0"
                         android:textColor="@color/text_red"
                         android:textSize="@dimen/textsize_level4"
                         android:layout_marginLeft="15dp"
@@ -570,7 +570,7 @@
                 android:id="@+id/view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/tel_bg"
+                android:background="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/tv_reserve_online"
@@ -580,10 +580,10 @@
                 android:id="@+id/tv_reserve_online"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/my_bg"
+                android:background="@color/text_red"
                 android:gravity="center"
                 android:text="@string/reserve_online"
-                android:textColor="@color/text_black"
+                android:textColor="@color/text_white"
                 android:textSize="@dimen/textsize_level3"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/view"
@@ -596,7 +596,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_5"
                 android:text="@string/tel_reserve"
-                android:textColor="@color/my_bg"
+                android:textColor="@color/text_red"
                 android:textSize="@dimen/textsize_level2"
                 app:layout_constraintBottom_toTopOf="@+id/tv_detail_tel"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -610,7 +610,7 @@
                 android:layout_marginBottom="@dimen/margin_5"
                 android:maxLength="13"
                 android:text="400-8208888"
-                android:textColor="@color/my_bg"
+                android:textColor="@color/text_red"
                 android:textSize="@dimen/textsize_level2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
