--- a/WhereToPlay/app/src/main/res/values-v19/dimens.xml
+++ b/WhereToPlay/app/src/main/res/values-v19/dimens.xml
@@ -113,6 +113,7 @@
     <dimen name="margin_20">20dp</dimen>
     <dimen name="margin_22">22dp</dimen>
     <dimen name="margin_24">24dp</dimen>
+    <dimen name="margin_26">26dp</dimen>
     <dimen name="margin_30">30dp</dimen>
     <dimen name="margin_35">35dp</dimen>
     <dimen name="margin_36">36dp</dimen>
