--- a/WhereToPlay/app/src/main/res/layout/activity_main.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_main.xml
@@ -122,6 +122,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_main_tab_mine"
                     android:layout_width="@dimen/width_0"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -131,6 +132,7 @@
                     android:paddingTop="@dimen/padding_5">
 
                     <ImageView
+                        android:id="@+id/iv_main_tab_mine"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_7"
