--- a/WhereToPlay/app/src/main/res/layout/fragment_merchant_housetype.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_merchant_housetype.xml
@@ -4,7 +4,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         android:gravity="center"
         android:layout_marginLeft="@dimen/margin_15"
         android:layout_marginRight="@dimen/margin_15"
@@ -12,11 +11,12 @@
         android:layout_marginBottom="@dimen/margin_26"
         android:orientation="vertical">
 
-        <WebView
-            android:id="@+id/wv_merchant_brief"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rc_merchant_housetype"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </WebView>
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 </layout>
