好不容易改了一大堆，今天又要往回改，只能提交一个版本，以防之后改回来

--- a/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail.xml
@@ -502,6 +502,7 @@
                         app:tabMode="scrollable"
                         app:tabSelectedTextColor="@color/text_red"
                         app:tabIndicatorHeight="@dimen/height_2"
+                        app:tabTextAppearance="@style/MyTabLayoutTextStyle"
                         android:background="@color/white"
                         />
 
