--- a/WhereToPlay/app/src/main/res/layout/fragment_merchant_brief.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_merchant_brief.xml
@@ -15,7 +15,7 @@
         <WebView
             android:id="@+id/wv_merchant_brief"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="@dimen/height_411">
         </WebView>
 
     </LinearLayout>
