--- a/WhereToPlay/app/src/main/res/values/styles.xml
+++ b/WhereToPlay/app/src/main/res/values/styles.xml
@@ -130,4 +130,9 @@
         <item name="android:textSize">@dimen/textsize_levelsmall</item>
     </style>
 
+    <style name="MyTabLayoutTextStyle" >
+        <item name="android:textSize">@dimen/textsize_levelmedium</item>
+        <item name="android:textColor">@color/text_black</item>
+    </style>
+
 </resources>
