--- a/WhereToPlay/app/src/main/res/values-v19/dimens.xml
+++ b/WhereToPlay/app/src/main/res/values-v19/dimens.xml
@@ -126,6 +126,7 @@
     <dimen name="margin_56">56dp</dimen>
     <dimen name="margin_55">55dp</dimen>
     <dimen name="margin_60">60dp</dimen>
+    <dimen name="margin_65">65dp</dimen>
     <dimen name="margin_80">80dp</dimen>
     <dimen name="margin_100">100dp</dimen>
     <dimen name="margin_200">200dp</dimen>
@@ -148,6 +149,8 @@
     <dimen name="padding_16">16dp</dimen>
     <dimen name="padding_18">18dp</dimen>
     <dimen name="padding_20">20dp</dimen>
+    <dimen name="padding_25">25dp</dimen>
+    <dimen name="padding_32">32dp</dimen>
     <dimen name="padding_60">60dp</dimen>
 
     <!--width-->
