--- a/WhereToPlay/app/src/main/res/values/dimens.xml
+++ b/WhereToPlay/app/src/main/res/values/dimens.xml
@@ -119,6 +119,7 @@
     <dimen name="margin_50">50dp</dimen>
     <dimen name="margin_56">56dp</dimen>
     <dimen name="margin_60">60dp</dimen>
+    <dimen name="margin_65">65dp</dimen>
     <dimen name="margin_80">80dp</dimen>
     <dimen name="margin_100">100dp</dimen>
     <dimen name="margin_200">200dp</dimen>
@@ -141,6 +142,8 @@
     <dimen name="padding_16">16dp</dimen>
     <dimen name="padding_18">18dp</dimen>
     <dimen name="padding_20">20dp</dimen>
+    <dimen name="padding_25">25dp</dimen>
+    <dimen name="padding_32">32dp</dimen>
     <dimen name="padding_60">60dp</dimen>
 
     <!--width-->
