--- a/WhereToPlay/app/src/main/res/values/dimens.xml
+++ b/WhereToPlay/app/src/main/res/values/dimens.xml
@@ -121,6 +121,10 @@
     <dimen name="margin_60">60dp</dimen>
     <dimen name="margin_65">65dp</dimen>
     <dimen name="margin_80">80dp</dimen>
+    <dimen name="margin_92">92dp</dimen>
+    <dimen name="margin_94">94dp</dimen>
+    <dimen name="margin_95">95dp</dimen>
+    <dimen name="margin_96">96dp</dimen>
     <dimen name="margin_100">100dp</dimen>
     <dimen name="margin_200">200dp</dimen>
 
