--- a/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail.xml
@@ -482,12 +482,12 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/margin_5"
-                            android:text="@string/action"
+                            android:text="@string/merchant_housenews"
                             android:textColor="@color/text_black"
                             android:textSize="@dimen/normal_textsize" />
                     </LinearLayout>
                 </android.support.constraint.ConstraintLayout>
-                
+
 
                 <!--去掉新加的tablayout 和 viewpager 组合-->
                 <!--                <LinearLayout
