--- a/WhereToPlay/app/src/main/res/values-v19/dimens.xml
+++ b/WhereToPlay/app/src/main/res/values-v19/dimens.xml
@@ -198,9 +198,11 @@
     <dimen name="height_36">36dp</dimen>
     <dimen name="height_38">38dp</dimen>
     <dimen name="height_40">40dp</dimen>
+    <dimen name="height_44">44dp</dimen>
     <dimen name="height_45">45dp</dimen>
     <dimen name="height_48">48dp</dimen>
     <dimen name="height_50">50dp</dimen>
+    <dimen name="height_54">54dp</dimen>
     <dimen name="height_55">55dp</dimen>
     <dimen name="height_60">60dp</dimen>
     <dimen name="height_65">65dp</dimen>
