--- a/WhereToPlay/app/src/main/res/layout/fragment_housenews.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_housenews.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -108,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tv_room_title"
                 android:layout_marginTop="@dimen/margin_5"
-                android:drawableLeft="@drawable/reserve_address"
+                android:drawableStart="@drawable/reserve_address"
                 android:drawablePadding="@dimen/padding_10"
                 android:maxWidth="@dimen/width_260"
                 android:textColor="@color/text_black"
@@ -121,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/tv_room_address"
-                android:layout_marginLeft="@dimen/margin_40"
+                android:layout_marginStart="@dimen/margin_40"
                 android:layout_toRightOf="@+id/tv_reserve_info_address"
                 android:textColor="@color/text_black"
                 android:textSize="@dimen/textsize_levelsmall"/>
@@ -131,5 +132,123 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/line_height"
             android:background="@color/pay_reserve_list_divider_white" />
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="@dimen/margin_15"
+            android:paddingEnd="@dimen/margin_52"
+            android:paddingBottom="@dimen/margin_22"
+            android:background="@color/white"
+            android:layout_marginTop="@dimen/margin_10">
+
+            <TextView
+                android:id="@+id/tv_housenews_use"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/housenews_use"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/textsize_levelsmall"
+                android:drawableStart="@drawable/merchant_housenews_use_small"
+                android:drawablePadding="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_25"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/tv_housenews_book"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/housenews_book"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/textsize_levelsmall"
+                android:drawableStart="@drawable/merchant_housenews_book_small"
+                android:drawablePadding="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_25"
+                android:layout_marginStart="@dimen/margin_20"
+                app:layout_constraintLeft_toRightOf="@+id/tv_housenews_use"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/tv_housenews_free"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/housenews_free"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/textsize_levelsmall"
+                android:drawableStart="@drawable/merchant_housenews_free_small"
+                android:drawablePadding="@dimen/margin_5"
+                android:layout_marginTop="@dimen/margin_25"
+                android:layout_marginStart="@dimen/margin_20"
+                app:layout_constraintLeft_toRightOf="@+id/tv_housenews_book"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/tv_housenews_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/housenews_typename"
+                android:textSize="@dimen/textsize_levelmedium"
+                android:textColor="@color/text_gray"
+                android:layout_marginTop="@dimen/margin_35"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintTop_toBottomOf="@+id/tv_housenews_free"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/tv_housenews_housename"
+                />
+
+            <TextView
+                android:id="@+id/tv_housenews_housename"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/housenews_housename"
+                android:textSize="@dimen/textsize_levelmedium"
+                android:textColor="@color/text_gray"
+                app:layout_constraintTop_toTopOf="@+id/tv_housenews_type"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/tv_housenews_type"
+                app:layout_constraintRight_toLeftOf="@+id/tv_housenews_lowest"/>
+
+            <TextView
+                android:id="@+id/tv_housenews_lowest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/housenews_lowest"
+                android:textSize="@dimen/textsize_levelmedium"
+                android:textColor="@color/text_gray"
+                app:layout_constraintTop_toTopOf="@+id/tv_housenews_type"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/tv_housenews_housename"
+                app:layout_constraintRight_toLeftOf="@+id/tv_housenews_housenews"/>
+
+            <TextView
+                android:id="@+id/tv_housenews_housenews"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/housenews_housenews"
+                android:textSize="@dimen/textsize_levelmedium"
+                android:textColor="@color/text_gray"
+                app:layout_constraintTop_toTopOf="@+id/tv_housenews_type"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/tv_housenews_lowest"
+                app:layout_constraintRight_toRightOf="parent"/>
+
+        </android.support.constraint.ConstraintLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line_height"
+            android:background="@color/pay_reserve_list_divider_white" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rc_merchant_housenews"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 </layout>
