--- a/WhereToPlay/app/src/main/res/layout/item_housenews.xml
+++ b/WhereToPlay/app/src/main/res/layout/item_housenews.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <variable
-            name="store"
-            type="com.fanc.wheretoplay.datamodel.StoreList.Store" />
-    </data>
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/margin_15"
+        android:paddingEnd="@dimen/margin_52"
         android:background="@color/white"
+        android:layout_gravity="center_vertical"
         >
 
         <TextView
@@ -35,33 +36,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="97dp"/>
+            app:layout_constraintGuide_percent="0.16"/>
 
         <TextView
             android:id="@+id/tv_housenews_housename"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="8011111"
+            android:text="801"
             android:textSize="@dimen/textsize_levelmedium"
             android:textColor="@color/text_black"
             app:layout_constraintTop_toTopOf="@+id/tv_housenews_type"
             app:layout_constraintBottom_toBottomOf="@+id/tv_housenews_type"
-            app:layout_constraintLeft_toLeftOf="@+id/gl_1"
-            app:layout_constraintRight_toRightOf="@+id/gl_2"/>
+            app:layout_constraintLeft_toRightOf="@+id/gl_1"
+            app:layout_constraintRight_toLeftOf="@+id/gl_2"
+            />
 
         <android.support.constraint.Guideline
             android:id="@+id/gl_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="149dp"/>
+            app:layout_constraintGuide_percent="0.5"/>
 
-        <android.support.constraint.Guideline
-            android:id="@+id/gl_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="192dp"/>
 
         <TextView
             android:id="@+id/tv_housenews_lowest"
@@ -72,7 +68,24 @@
             android:textColor="@color/text_black"
             app:layout_constraintTop_toTopOf="@+id/tv_housenews_type"
             app:layout_constraintBottom_toBottomOf="@+id/tv_housenews_type"
-            app:layout_constraintLeft_toLeftOf="@+id/gl_3"
+            app:layout_constraintLeft_toRightOf="@+id/gl_2"
+            app:layout_constraintRight_toLeftOf="@+id/gl_3"/>
+
+        <android.support.constraint.Guideline
+            android:id="@+id/gl_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.83"/>
+
+        <ImageView
+            android:id="@+id/iv_housenews_use_detail"
+            android:layout_width="@dimen/width_18"
+            android:layout_height="@dimen/width_18"
+            android:src="@drawable/merchant_housenews_use_big"
+            android:layout_marginEnd="@dimen/padding_5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/gl_4"/>
 
         <android.support.constraint.Guideline
@@ -80,46 +93,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="243dp"/>
-        <android.support.constraint.Guideline
-            android:id="@+id/gl_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="298dp"/>
+            app:layout_constraintGuide_end="@dimen/width_0"/>
 
-        <ImageView
-            android:id="@+id/iv_housenews_use_detail"
-            android:layout_width="@dimen/width_18"
-            android:layout_height="@dimen/width_18"
-            android:src="@drawable/merchant_housenews_use_big"
-            android:layout_marginEnd="@dimen/margin_43"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/gl_5"
-            app:layout_constraintRight_toRightOf="@+id/gl_6"/>
-
-        <android.support.constraint.Guideline
-            android:id="@+id/gl_6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="324dp"/>
-
-
+    </android.support.constraint.ConstraintLayout>
         <ImageView
             android:id="@+id/iv_housenews_arrow"
             android:layout_width="@dimen/width_6"
             android:layout_height="@dimen/height_11"
             android:src="@drawable/right"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="@dimen/margin_15"
-            android:layout_marginStart="@dimen/margin_355"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-
-    </android.support.constraint.ConstraintLayout>
-
+            />
+    </RelativeLayout>
 </layout>
