--- a/WhereToPlay/app/src/main/res/layout/activity_main.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/ll_main_tab"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:background="@color/bg_white"
+                android:background="@color/white"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
