--- a/WhereToPlay/app/src/main/res/layout/fragment_brief.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_brief.xml
@@ -85,6 +85,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/margin_10"
+            android:paddingTop="@dimen/padding_25"
+            android:paddingStart="@dimen/padding_15"
+            android:paddingEnd="@dimen/padding_15"
             android:background="@color/white"/>
     </LinearLayout>
 </layout>
