--- a/WhereToPlay/app/src/main/res/layout/fragment_mine.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_mine.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg"
+        android:background="@color/bg_gray"
         android:orientation="vertical">
 
         <com.fanc.wheretoplay.view.TopMenu
@@ -23,12 +23,12 @@
             android:id="@+id/rl_mine_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/text_and_buttor_orange"
+            android:background="@color/text_red"
             android:onClick="@{click.onViewClick}"
             android:paddingBottom="@dimen/padding_20"
             android:paddingLeft="@dimen/padding_15"
             android:paddingRight="@dimen/padding_20"
-            android:paddingTop="@dimen/padding_15">
+            android:paddingTop="@dimen/width_0">
 
             <com.fanc.wheretoplay.view.CircleImageView
                 android:id="@+id/civ_mine"
@@ -45,62 +45,49 @@
                 android:layout_marginTop="@dimen/margin_2"
                 android:layout_toRightOf="@+id/civ_mine"
                 android:text="@string/nickname"
-                android:textColor="@color/text_black"
-                android:textSize="@dimen/textsize_level2"/>
-
-            <TextView
-                android:id="@+id/tv_mine_mobile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/tv_mine_nickname"
-                android:layout_below="@+id/tv_mine_nickname"
-                android:layout_marginTop="@dimen/margin_10"
-                android:text="17828790400"
-                android:textColor="@color/text_black"
-                android:textSize="@dimen/normal_textsize"/>
+                android:textColor="@color/text_white"
+                android:textSize="@dimen/menu_title_size"/>
 
             <TextView
                 android:id="@+id/tv_mine_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/tv_mine_nickname"
-                android:layout_marginLeft="@dimen/margin_30"
-                android:layout_toRightOf="@+id/tv_mine_nickname"
+                android:layout_alignLeft="@+id/tv_mine_nickname"
+                android:layout_below="@+id/tv_mine_nickname"
+                android:layout_marginTop="@dimen/margin_10"
                 android:text="ID:10086"
-                android:textColor="@color/text_black"
-                android:textSize="@dimen/normal_textsize"/>
+                android:textColor="@color/text_white"
+                android:textSize="@dimen/textsize_level2"/>
 
             <TextView
                 android:id="@+id/tv_mine_integral"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/tv_mine_mobile"
+                android:layout_alignBaseline="@+id/tv_mine_id"
                 android:layout_alignParentRight="true"
                 android:text="86分"
-                android:textColor="@color/text_black"
-                android:textSize="@dimen/normal_textsize"/>
+                android:textColor="@color/text_white"
+                android:textSize="@dimen/textsize_level2"/>
 
             <TextView
                 android:id="@+id/tv_mine_integral_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/tv_mine_mobile"
+                android:layout_alignBaseline="@+id/tv_mine_id"
                 android:layout_toLeftOf="@+id/tv_mine_integral"
                 android:text="@string/integral_1"
-                android:textColor="@color/text_black"
-                android:textSize="@dimen/normal_textsize"/>
+                android:textColor="@color/text_white"
+                android:textSize="@dimen/textsize_level2"/>
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_10"
-            android:background="@color/black"/>
+
 
         <com.fanc.wheretoplay.view.ItemView
             android:id="@+id/iv_mine_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"/>
+            android:onClick="@{click.onViewClick}"
+            android:layout_marginTop="@dimen/margin_10"/>
 
         <com.fanc.wheretoplay.view.ItemView
             android:id="@+id/iv_mine_wallet"
@@ -114,16 +101,13 @@
             android:layout_height="wrap_content"
             android:onClick="@{click.onViewClick}"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_10"
-            android:background="@color/black"/>
 
         <com.fanc.wheretoplay.view.ItemView
             android:id="@+id/iv_mine_integral"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{click.onViewClick}"/>
+            android:onClick="@{click.onViewClick}"
+            android:layout_marginTop="@dimen/margin_10"/>
 
         <com.fanc.wheretoplay.view.ItemView
             android:id="@+id/iv_mine_order"
@@ -137,13 +121,16 @@
             android:layout_height="wrap_content"
             android:onClick="@{click.onViewClick}"/>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_10"
-            android:background="@color/black"/>
 
         <com.fanc.wheretoplay.view.ItemView
             android:id="@+id/iv_mine_referral"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{click.onViewClick}"
+            android:layout_marginTop="@dimen/margin_10"/>
+
+        <com.fanc.wheretoplay.view.ItemView
+            android:id="@+id/iv_mine_drive"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="@{click.onViewClick}"/>
